# license-gen

./: Cargo.toml
src/: lib.rs  main.rs
