[package]
name = "license-gen"
license = "MIT"
version = "0.1.0"
authors = ["anatawa12"]
repository = "https://github.com/anatawa12/license-gen"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cargo_metadata = "0.15.0"
itertools = "0.10.5"
